--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -38,7 +38,8 @@ div.post-info.btn-group {
 	font-family: 'Lato', sans-serif !important;
 }
 
-div.post-info.btn-primary {
+div.post-info button.btn-primary {
 	background: none !important;
 	color: black !important;
+	border: none !important;
 }
