--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   	</button>
  </div>
 
+<% if user_signed_in? %>
 <div class="overlay overlay-slidedown">
 	<button type="button" class="overlay-close">Close</button>
 	<nav>
@@ -31,12 +32,13 @@
 			<li><a href="#">Your Submissions</a></li>
 			<li>
 			<% if current_user.memberships.any? %>
-			<%= link_to 'Received Submissions', organisation_opportunity_submissions_path(current_user.organisations.first, current_user.organisations.first.opportunities.first) %></li>
+			<%= link_to "Works Submitted To #{current_user.organisations.first.name} ", organisation_opportunity_submissions_path(current_user.organisations.first, current_user.organisations.first.opportunities.first) %></li>
 			<% end %>
+			<li><%= link_to "Log Out", destroy_user_session_path, method: :delete%></li>
 		</ul>
 	</nav>
 </div>
-
+<% end %>
 <div>
 <%= yield %>
 </div>
