--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -1,3 +1,5 @@
+<% submission_triplet.each do |submission| %>
+
 <div class="col-sm-4">
 	<div class="panel panel-default">
     <div class="panel-heading">
@@ -44,3 +46,4 @@
 		</div>
 	</div>
 </div>
+<% end %>
