--- a/app/views/submissions_managers/show.html.erb
+++ b/app/views/submissions_managers/show.html.erb
@@ -8,9 +8,9 @@
 	</div>
 
 
-	<% @submissions.in_groups_of(3, false) do |own_submission_triplet| %>
+	<% @submissions.in_groups_of(3, false) do |submission_triplet| %>
 		<div class="row">
-			<%= render own_submission_triplet %>
+			<%= render 'submissions_managers/bla', submission_triplet: submission_triplet %>
 		</div>
 	<% end %>
 
