--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -36,7 +36,7 @@
 
 
 			<div class="submit-ready pull-right col-md-2" ng-init="details = false" ng-click="details = !details">
-				<a href="#" class="add-details"><p>Add Details</p></a>
+				<a href="#" class="add-details show-details"><p>Add Details</p></a>
 			</div>
 
 
