--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="SubmissionIndexCtrl">
 <% if @opportunity.submissions.none? %>
 	No submissions yet
 <% else %>
