--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -137,16 +137,18 @@ div.file-field.collection-image {
 /*----COLLECTIONS SHOW---*/
 
 div.work-container {
-  margin-top: 50%;
-  width: 75%;
+  width: 100%;
   margin: 0 auto;
-  margin-top: 5%;
+  margin-top: 25%;
 }
 
 div.collection-display:focus {
   outline: none;
 }
 
+div.collection-display {
+  width: 100vw;
+}
 
 
 /*---VISUAL PIECES--*/
@@ -159,6 +161,7 @@ img.select, img.small {
   border: 1px solid rgba(0,0,0,0.2);
   border-radius: 6px;
   margin: 0 auto;
+  box-shadow: 0px 0px 5px #888888;
 }
 
 
@@ -317,4 +320,14 @@ div.first p.work-paragraph::first-line {
 }
 
 /*SHOWING DETAILS*/
+
+div.collection-work-information div.title-field {
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  font-size: 22px;
+  text-align: center;
+}
+
+
+
 
