--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -357,5 +357,7 @@ div.select-work-container {
   /*margin: 0 auto;*/
   /*text-align: center;*/
   margin-top: 2em;
+  padding-left: 15px;
+  font-size: 12px;
 }
 
