--- a/app/assets/stylesheets/menu.css.scss
+++ b/app/assets/stylesheets/menu.css.scss
@@ -17,7 +17,7 @@
 	top: 20px;
 	overflow: hidden;
 	border: none;
-	background: url(../img/cross.png) no-repeat center center;
+	background: url(/assets/cross.png) no-repeat center center;
 	text-indent: 011%;
 	color: transparent;
 	outline: none;
