Submitting to opps form working

--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -43,3 +43,16 @@ div.post-info button.btn-primary {
 	color: black !important;
 	border: none !important;
 }
+
+
+/*---- SUBMITTING TO OPPS ------*/
+
+div.sub-message {
+	width: 100%;
+	font-size: 22px;
+}
+
+div.sub-message textarea {
+	width: 100%;
+	text-align: left;
+}
