--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,15 +1,38 @@
-<%= form_for @submission, url: organisation_opportunity_submissions_path do |f| %>
 
-	
+<div class="new-organisation container">
 
-	
-		<%= f.label :work, 'Select Work' %>
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="org-form-wrapper col-md-6">
+		<%= form_for @submission, url:organisation_opportunity_submissions_path do |f| %>
 
-		<%= f.select(:work, @available_works) %>
+		
+			<div class="row">
+				<div class="col-md-12 genre-field role-field">
+					<%= f.label :work, 'Select Work' %>
+					<%= f.select(:work, @available_works, {}, class: "form-control") %>
+				</div>
+			</div>
 
-	<%= f.label :message %>
-	<%= f.text_area :message %>
+			<br><br><br>
 
-	<%= f.submit 'Submit', class: 'btn btn-primary' %>
+			<div class="row">
+				<div class="col-md-12 description-field org-desc-field sub-message">
+			<%= f.text_area :message, placeholder: "Write your message to #{@opportunity.organisation.name} " %>
+				</div>
+			</div>
 
-<% end %>
+
+
+			<div class="row org-wrap-sub">
+				<div class="col-md-12">
+			<%= f.submit 'Submit', class: 'form-submit org-submit' %>
+				</div>
+			</div>
+
+		<% end %>
+
+		</div>
+		<div class="col-md-3"></div>
+	</div>
+</div>
