About to wipe laptop

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 
 <% if user_signed_in? %>
- <div class="logo-centered"
+ <div class="logo-centered">
   	<button id="trigger-overlay" type="button"><img src="/assets/FfLogoBlack.png" class="logo-button">
   	</button>
  </div>
