Added fonts by cdn and entypo in public folder

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,17 +6,16 @@
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro');
 @import url('http://fonts.googleapis.com/css?family=Merriweather:400,300,700');
 @import url('http://fonts.googleapis.com/css?family=Lato:300,400,900');
-@import url('http://fonts.googleapis.com/css?family=Vollkorn:400italic,400');
 @import url('http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700');
 @import url('http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic');
 @import url('http://fonts.googleapis.com/css?family=Droid+Sans');
 @import url('http://fonts.googleapis.com/css?family=Cardo:400,400italic');
 
-/*@font-face {
+@font-face {
 	font-family: 'Entypo';
-	src: url('../fonts/entypo/entypo.ttf') format('truetype');
+	src: url('/assets/fonts/entypo/entypo.ttf') format('truetype');
 }
-*/
+
 
 body {
 	margin: 0px;
