--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,19 @@
 <html ng-app="app">
 <head>
   <title>Folioapp</title>
+  <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet'>
+  <link rel="stylesheet" href="http://reset5.googlecode.com/hg/reset.min.css">
+	 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,700">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,900">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700">	
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cardo:400,400italic">
+
+
+
+
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
   <!-- <base href="/" /> -->   
