Added glyphicons via cdn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cardo:400,400italic">
-
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 
 
