--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -10,7 +10,7 @@
 	<div class="summary row" id="summary-section">
 		<div class="col-md-6 left-hand-side">
 			<div class="col-md-4"></div>
-			<div class="profile-info summary-column col-md-4 col-md-offset-1">
+			<div class="profile-info summary-column col-md-5 col-md-offset-1">
 				<div class="info-wrapper row col-md-12">
 					<div class="picture-options row col-md-12">
 						<div class="change-profile-pic" ng-show="editable">
@@ -26,7 +26,7 @@
 							<% if @organisation.image.present? %>
 							<img class="profile-pic" ng-hide="imageSrc" id="profile-pic" ng-src="{{organisation.image}}">
 							<% end %>
-							<img ng-show="imageSrc" class="profile-pic" id="profile-pic" ng-src="{{imageSrc}}">
+							<img ng-show="imageSrc" class="profile-pic" id=5profile-pic" ng-src="{{imageSrc}}">
 						</div>
 					</div>
 					<div class="text-inputs row text-center">
@@ -47,10 +47,11 @@
 		<div class="col-md-6 right-hand-side">
 			<div class="col-md-2"></div>
 			<div class="profile-preview summary-column col-md-8">
+				<% if @organisation.opportunities.any? %>
 				<div class="work-preview-header row">
 					<h3 class="col-md-12 text-center" id="selections">{{organisation.name}}'s Opportunities </h3>
 				</div>
-
+				<% end %>
 				<div class="work-wrapper row" ng-repeat="opp in organisation.opportunities">
 
 					<div class="work-preview-info col-md-9" ng-class="{ 'story': profile.selection == storyPreview }">
