Removed collections title from coll index

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -7,7 +7,7 @@
       <div class="container">
         <ul class="nav navbar-nav" role="navigation">
           <!-- <li><a href="#">Profile</a></li> -->
-          <li><a href="#">Collections</a></li>
+          <li><a href="#"></a></li>
           <!-- <li><a href="#">Random</a></li> -->
           <!-- <li><a href="#">Popular</a></li> -->
 <!--           <li><a href="#">All</a></li>
