--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -98,7 +98,7 @@
 
 
     <% if @user == current_user %>
-			<a href="#" ng-click="createCollection()">Add A New Collection</a>
+			<a href="#" class="new-collection-footer form-submit" ng-click="createCollection()">Add A New Collection</a>
 		<% end %>
 
     <!-- END MAIN CONTENT -->
