Fixed work selection bug in work.rb and work format bug in submissions consoles

--- a/app/views/submissions_managers/_bla.html.erb
+++ b/app/views/submissions_managers/_bla.html.erb
@@ -16,7 +16,7 @@
 			</div>
 			<div class="post-info">
 				<blockquote><%= submission.message %></blockquote>
-				<%= submission.work.format %>
+				<%= submission.work.work_format %>
 				<br>
 				<%= submission.work.caption %>
 				<br>
