--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -57,6 +57,7 @@ body, a{
   width: 60px;
   height: 60px;
   margin-right: .75em;
+  margin-bottom: 1em;
   overflow: hidden;
 }
 .add-images{
@@ -148,7 +149,7 @@ div.file-field.collection-image {
 div.work-container {
   width: 100%;
   margin: 0 auto;
-  margin-top: 25%;
+  margin-top: 15%;
 }
 
 div.collection-display:focus {
@@ -163,7 +164,6 @@ div.collection-display {
 /*---VISUAL PIECES--*/
 
 img.select, img.small {
-  max-width: 100%;
   max-height: 100%;
   width: auto;
   height: auto;
