Refactored file upload into the fileselect directive

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -16,13 +16,14 @@
     </header>
     <!-- END NAVBAR -->
     <!-- MAIN CONTENT -->
-    <div ng-repeat="collection in user.collections" class="row collection-row {{collection.title}}" ng-controller="CollectionInstanceCtrl">
+    <div ng-repeat="collection in user.collections" class="row collection-row {{collection.title}}" ng-controller="CollectionInstanceCtrl" data-collection-id="{{collection.id}}">
+
       <div class="collection-">
         <div class="col-xs-3 col-xs-offset-2">
 
 
  					<div class="file-field collection-image col-xs-12" ng-show="editable">
-        		<input type="file" accept="image/*" ng-file-select="onFileSelect($files, collection.id)" id="collection_image" name="collection[image]" >
+        		<input type="file" accept="image/*" ng-file-select="onFileSelect($files)" id="collection_image" name="collection[image]" >
 
 
 	        	<img ng-show="editable" class="img-circle collection-preview editable-pic" ng-src="{{imageSrc || collection.image}}">
