Uploading images spec all green

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -20,7 +20,7 @@
 		<div class="col-md-2"></div>
 		<div class="magnify col-md-8" ng-show="currentWork().format == 'image' ">
 			<div class="large" style="background:url({{currentWork().image}}) no-repeat"></div>
-			<img class="small select" ng-src="{{currentWork().image}}">
+			<img class="small select uploaded-image" ng-src="{{currentWork().image}}">
 		</div>
 		<div class="col-md-2"></div>
 		<div class="text-work" ng-show="currentWork().format == 'text'">
