--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
 <% if user_signed_in? %>
  <div class="logo-centered">
-  	<button id="trigger-overlay" type="button"><img src="/assets/FfLogoBlack.png" class="logo-button">
+  	<button id="trigger-overlay" type="button"><img src="http://placehold.it/300.jpg" class="logo-button">
   	</button>
  </div>
 
@@ -50,6 +50,8 @@
 		</ul>
 	</nav>
 </div>
+
+
 <% end %>
 
 <%= yield %>
