Fixed creating opps spec

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,7 @@
 					</div>
 						<p ng-repeat="membership in user.memberships" class="organisations">{{membership.organisationRole}} of <a href="/organisations/{{membership.organisationId}}/">{{membership.organisation}}</a>
 						</p>
+						<!-- <button class="btn btn-default">Follow</button> -->
 					</div>
 				</div>
 			<div class="col-md-4"></div>
